<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Maven</string>
    <string name="form_new_item">New Item</string>
    <string name="form_edit_item">Edit Item</string>
    <string name="action_settings">Settings</string>
    <string name="text1">Nome</string>
    <string name="text2">Sobrenome</string>
    <string name="text3">E-mail</string>
    <string name="text4">Login</string>
    <string name="text5">Senha</string>
    <string name="btn1">Salvar</string>
    <string name="confirm_delete">Confirma remoção deste usuário?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
</resources>
