<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/widget32"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
	android:id="@+id/widget_id"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<TextView
	android:id="@+id/widget33"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/text1" />
<EditText
	android:id="@+id/widget35"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<TextView
	android:id="@+id/widget36"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/text2" />
<EditText
	android:id="@+id/widget37"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<TextView
	android:id="@+id/widget38"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/text3" />
<EditText
	android:id="@+id/widget39"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<TextView
	android:id="@+id/widget40"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/text4" />
<EditText
	android:id="@+id/widget41"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<TextView
	android:id="@+id/widget42"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/text5" />
<EditText
	android:id="@+id/widget43"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="" />
<Button
	android:id="@+id/widget44"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/btn1"
  android:onClick="submitForm" />
</LinearLayout>
